--- a/NLP_practice.ipynb
+++ b/NLP_practice.ipynb
@@ -2678,7 +2678,7 @@
     "    # Let us use the lower letter words\n",
     "    mytokens =[word.lemma_ for word in mytokens]\n",
     "    #clean the text \n",
-    "    return(mytokens)"
+    "    return(mytokens):"
    ]
   }
  ],
