--- a/NLP_practice.ipynb
+++ b/NLP_practice.ipynb
@@ -8,6 +8,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/Duygubirol/NLP.git\n",
+      " * [new branch]      main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git remote add origin https://github.com/Duygubirol/NLP.git\n",
+    "! git branch -M main\n",
+    "! git push -u origin main"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2612,7 +2639,7 @@
    ],
    "source": [
     "# Extract one sentence\n",
-    "str(data_amazon.Review[1:2])"
+    "str(data_amazon.Review[1:2])."
    ]
   },
   {
