--- a/NLP_practice.ipynb
+++ b/NLP_practice.ipynb
@@ -2639,7 +2639,7 @@
    ],
    "source": [
     "# Extract one sentence\n",
-    "str(data_amazon.Review[1:2])."
+    "str(data_amazon.Review[1:2])"
    ]
   },
   {
