--- a/NLP_linkdeln _practice.ipynb
+++ b/NLP_linkdeln _practice.ipynb
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"SMSSpamCollection.tsv\", sep=\"\\t\", header= None)"
+    "fullcorpus = pd.read_csv(\"SMSSpamCollection.tsv\", sep=\"\\t\", header= None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -361,13 +361,163 @@
        "4   ham                I HAVE A DATE ON SUNDAY WITH WILL!!"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.head()"
+    "fullcorpus.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullcorpus.columns=[\"label\",\"body text\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>body text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>I've been searching for the right words to tha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Even my brother is not like to speak with me. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>I HAVE A DATE ON SUNDAY WITH WILL!!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  label                                          body text\n",
+       "0   ham  I've been searching for the right words to tha...\n",
+       "1  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "2   ham  Nah I don't think he goes to usf, he lives aro...\n",
+       "3   ham  Even my brother is not like to speak with me. ...\n",
+       "4   ham                I HAVE A DATE ON SUNDAY WITH WILL!!"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullcorpus.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input data has 5568 rows and 2 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what is the shape of the dataset\n",
+    "print(\"Input data has {} rows and {} columns\".format(len(fullcorpus),len(fullcorpus.columns)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out of 5568 rows, 746 are spam,4822 are ham\n"
+     ]
+    }
+   ],
+   "source": [
+    "#How many spam / ham are there?\n",
+    "print(\"Out of {} rows, {} are spam,{} are ham\".format(len(fullcorpus), len(fullcorpus[fullcorpus[\"label\"]==\"spam\"]),len(fullcorpus[fullcorpus[\"label\"]==\"ham\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of null in label: 0\n",
+      "Number of null in text: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How much missing data is there?\n",
+    "print(\"Number of null in label: {}\".format(fullcorpus[\"label\"].isnull().sum()))\n",
+    "print(\"Number of null in text: {}\".format(fullcorpus[\"body text\"].isnull().sum()))"
    ]
   }
  ],
