--- a/01_09.ipynb
+++ b/01_09.ipynb
@@ -24,85 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>body_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>I've been searching for the right words to thank you for this breather. I promise i wont take yo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Nah I don't think he goes to usf, he lives around here though</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Even my brother is not like to speak with me. They treat me like aids patent.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>I HAVE A DATE ON SUNDAY WITH WILL!!</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  label  \\\n",
-       "0   ham   \n",
-       "1  spam   \n",
-       "2   ham   \n",
-       "3   ham   \n",
-       "4   ham   \n",
-       "\n",
-       "                                                                                             body_text  \n",
-       "0  I've been searching for the right words to thank you for this breather. I promise i wont take yo...  \n",
-       "1  Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive ...  \n",
-       "2                                        Nah I don't think he goes to usf, he lives around here though  \n",
-       "3                        Even my brother is not like to speak with me. They treat me like aids patent.  \n",
-       "4                                                                  I HAVE A DATE ON SUNDAY WITH WILL!!  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'greger' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m data\u001b[39m.\u001b[39mcolumns \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbody_text\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      7\u001b[0m data\u001b[39m.\u001b[39mhead()\n\u001b[1;32m----> 8\u001b[0m greger\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'greger' is not defined"
+     ]
     }
    ],
    "source": [
@@ -112,7 +48,8 @@
     "data = pd.read_csv(\"SMSSpamCollection.tsv\", sep='\\t', header=None)\n",
     "data.columns = ['label', 'body_text']\n",
     "\n",
-    "data.head()"
+    "data.head()\n",
+    "greger"
    ]
   },
   {
@@ -650,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
